# ServerDashboardContainer

./: .gitignore  2025-10-01-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  FRONTEND_IMPROVEMENT_PLAN.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  MINIMAL_IMPROVEMENTS.md  Makefile  QUICK_REFERENCE.md  README.md  TESTING_CHECKLIST.md  docker-compose.yml  docker-compose.yml.old  fix-port-conflict.sh  setup-autostart.sh
Docs/: INDEX.md  ORGANIZATION_SUMMARY.md
Docs/Frontend-Improvements/: BRAND_COMPLIANCE_UPDATE.md  DARK_MODE_COMPLETE.md  DARK_MODE_CONTRAST_FIX.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  FRONTEND_IMPROVEMENT_PLAN.md  GRAPH_UX_ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INTER_VS_DIN_NEXT.md  MOBILE_RESPONSIVE_ENHANCEMENTS.md  TABLE_CARD_ENHANCEMENTS.md  UI_UX_ENHANCEMENTS_SUMMARY.md  UI_UX_ENHANCEMENT_PLAN.md
Documentation/: BASH_SCRIPTS_CODE_REVIEW.md
schema/: metrics_schema.yaml  pyproject.toml
srcs/Frontend/: .dockerignore  Dash.py  Dash_old.py  Dockerfile  README_IMPROVEMENTS.md  UI_DESIGN_GUIDELINES.md  api_client.py  app.py  cache_utils.py  callbacks.py  callbacks_enhanced.py  components.py  config.py  data_processing.py  exceptions.py  export_utils.py  graph_config.py  loading_components.py  pyproject.toml  pytest.ini  refresh_utils.py  requirements.txt  table_card_config.py  toast_utils.py  utils.py  validation.py
srcs/Frontend/assets/: animations.css  dark-mode.css  styles.css
srcs/Frontend/tests/: README.md  __init__.py  conftest.py  test_cache_utils.py  test_utils.py  test_validation.py
(+65 files in other folders)
