[project]
name = "frontend"
version = "0.1.0"
description = "Dash web dashboard for server monitoring and visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash==3.1.0",
    "numpy==2.3.1",
    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "plotly==6.1.2",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.3",
    "requests==2.32.4",
]
